# DAT-FECHTER

./: .env.example  .eslintrc.js  .gitignore  Cargo.toml  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RUST_README.md  SYSTEM_VALIDATION.md  TESTING.md  VERIFICATION_SUMMARY.md  convert.sh  dex_data.json  jest.config.js  package-lock.json  package.json  run-tests.sh  test-e2e-flow.js  update-configs.sh  validate-system.js
.github/workflows/: test.yml
docs/: AI_SCORER_EXECUTOR_INTEGRATION.md  API.md  EXAMPLES.md  GITHUB_ACTIONS_SECURITY.md
src/: ai_onnx_scorer.rs  dex-data-fetcher.js  dex-data-fetcher.ts  dual_executor.rs  index.js  index.ts  lib.rs  token-registry.js
src/__tests__/: ai-scorer-executor-integration.test.js  dex-data-fetcher.test.js  dex-data-fetcher.test.ts  token-registry.test.js
src/api/: index.js  server.js
src/api/__tests__/: server.test.js
